[RED] implement delete test on controller